force-app/main/default/staticresources/python/Disappear/src/objects/PubTOV__c.object
<CustomObject>
    <fields>
        <fullName>ContractNumber__c</fullName>
        <label>Contract number</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>FormOfPayment__c</fullName>
        <label>Form of Payment</label>
        <picklist>
            <picklistValues>
                <fullName>In Kind</fullName>
                <default>true</default>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>InvoiceNumber__c</fullName>
        <label>Invoice number</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IsLogicallyDeleted__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Expired</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>NatureOfPayment__c</fullName>
        <label>Nature of Payment</label>
        <picklist>
            <picklistValues>
                <fullName>Research</fullName>
                <default>true</default>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>PaymentAmount__c</fullName>
        <label>Payment Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PaymentDate__c</fullName>
        <label>Payment Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Product_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Product Name derived from the Publication&apos;s Product Indications.</description>
        <label>Product Name</label>
        <referenceTo>AmgenProduct__c</referenceTo>
        <relationshipLabel>Publication TOV</relationshipLabel>
        <relationshipName>Publication_TOV</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PublicationStatus__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Publication Status</label>
        <referenceTo>PubStatus__c</referenceTo>
        <relationshipLabel>Publication TOV</relationshipLabel>
        <relationshipName>Publication_TOV</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Publication__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Publication</label>
        <referenceTo>Publication__c</referenceTo>
        <relationshipLabel>Publication TOV</relationshipLabel>
        <relationshipName>Publication_TOV</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SubmissionCycle__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Submission Cycle</label>
        <referenceTo>SubmissionCycle__c</referenceTo>
        <relationshipLabel>Publication TOV</relationshipLabel>
        <relationshipName>Publication_TOV</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Publication TOV</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Publication__c</columns>
        <columns>Product_Name__c</columns>
        <columns>PublicationStatus__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Publication TOV Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Publication TOV</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>